center button & container added

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,26 @@
 body {
     margin: 0;
-    /* Remove default margin */
 }
 
 iframe {
     display: block;
-    /* iframes are inline by default */
     height: 100vh;
-    /* Set height to 100% of the viewport height */
     width: 100vw;
-    /* Set width to 100% of the viewport width */
     border: none;
-    /* Remove default border */
+}
+
+.container {
+    height: 200px;
+    position: relative;
+    border: 3px solid green;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 button.round {
