--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ iframe {
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
+    -ms-transform: translateX(25%);
+    transform: translateX(25%);
 }
 
 button.round {
@@ -29,9 +29,9 @@ button.round {
     color: white;
     border: none;
     padding: 5px;
-    font-size: 31px;
-    height: 130px;
-    width: 130px;
+    font-size: 3em;
+    height: 6.25em;
+    width: 6.25em;
     border-radius: 50%;
     cursor: pointer;
     transition: all 0.2s ease;
